# event_networking

./: .gitignore  README.md  crewai_event_data.ipynb  pyproject.toml
output/: report.md
src/event_networking/: crew.py  main.py
src/event_networking/config/: agents.yaml  tasks.yaml
src/event_networking/messages/: connection_message_for_AI_Study_Group.md.md  connection_message_for_Name_5-Day_Agentic_AI_Challenge.md.md  connection_message_for_Name_AICamp.md.md
src/event_networking/models/: __init__.py  profile.py
src/event_networking/tools/: custom_tool.py  linkedin_tool.py
